--- a/server/restaurant/src/main/resources/application.properties
+++ b/server/restaurant/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:restaurantdb
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+server.servlet-path=/api
